Fix alignment of text.

--- a/source/stylesheets/components/_app.css.scss
+++ b/source/stylesheets/components/_app.css.scss
@@ -770,6 +770,7 @@ form.signup button.btn {
 }
 .skills-ul {
   font-size: 14px;
+  text-align: left;
 }
 
 .prog-ul {
